// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`subscribe with last-event-id should send past event from redis if cache missed 1`] = `
Array [
  Object {
    "id": 4,
    "payload": 4,
    "type": "test",
  },
  Object {
    "id": 5,
    "payload": 5,
    "type": "test",
  },
  Object {
    "id": 6,
    "payload": 6,
    "type": "test",
  },
  Object {
    "id": 7,
    "payload": 7,
    "type": "test",
  },
  Object {
    "id": 8,
    "payload": 8,
    "type": "test",
  },
  Object {
    "id": 9,
    "payload": 9,
    "type": "test",
  },
  Object {
    "id": 10,
    "payload": 10,
    "type": "test",
  },
  Object {
    "id": 11,
    "payload": 11,
    "type": "test",
  },
  Object {
    "id": 12,
    "payload": 12,
    "type": "test",
  },
]
`;

exports[`subscribe with last-event-id should send past event in cache 1`] = `
Array [
  Object {
    "id": 6,
    "payload": 6,
    "type": "test",
  },
  Object {
    "id": 7,
    "payload": 7,
    "type": "test",
  },
  Object {
    "id": 8,
    "payload": 8,
    "type": "test",
  },
  Object {
    "id": 9,
    "payload": 9,
    "type": "test",
  },
  Object {
    "id": 10,
    "payload": 10,
    "type": "test",
  },
  Object {
    "id": 11,
    "payload": 11,
    "type": "test",
  },
]
`;
